@@ -18,6 +18,7 @@
 extern int IDE_enabled;
 
 int     IDE_Initialise(int *argc, char *argv[]);
+void IDE_Exit(void);
 uint8_t IDE_GetByte(uint16_t addr, int no_side_effects);
 void    IDE_PutByte(uint16_t addr, uint8_t byte);
 
