@@ -1,3 +1,13 @@
+2011-11-11  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
+* af80.[ch], atari.c, cartridge.[ch], devices.[ch], ide.[ch], input.c,
+  pbi_bb.[ch], pbi_mio.[ch], pbi_proto80.[ch], pbi_xld.[ch], pbi.[ch],
+  sdl/video.c: Add or fix Exit functions for files/resources that were not
+  _explicitely_ closed/freed on exit.
+  Add call to Atari800_ErrExit also when commandline-parsing fails.
+  Previously when starting the dosvga target with "atari800 -artif",
+  the emulator would exit without uninitialising VGA, leaving mess on screen.
+
+
 2011-11-04  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
 * monitor.c: Fix a memory leak - buffer allocated by readline() should be
   freed by user.
